[package]
name = "account_provider_correction"
version = "0.0.1"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql"]}
tokio ={ version = "1", features = ["full"]}
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
config = "^0.15"
dotenv = "0.15"
log = "0.4"
log4rs = "1.1"